<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acromace.pointer.DebugActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="16dp"
        android:showDividers="middle">
        <TextView
            android:id="@+id/server_response_textview"
            android:textColor="@color/wallet_bright_foreground_holo_dark"
            android:background="@color/colorPrimaryDark"
            android:text="@string/server_response_default"
            android:layout_width="match_parent"
            android:layout_height="160dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/latitude_edittext"
                android:layout_width="128dp"
                android:layout_height="64dp"
                android:hint="@string/latitude"
                android:text="@string/debug_default_latitude"/>
            <EditText
                android:id="@+id/longitude_edittext"
                android:layout_width="128dp"
                android:layout_height="64dp"
                android:hint="@string/longitude"
                android:text="@string/debug_default_longitude"/>
            <EditText
                android:id="@+id/message_edittext"
                android:layout_width="128dp"
                android:layout_height="64dp"
                android:hint="@string/message"
                android:text="@string/message_default"/>
        </LinearLayout>
        <Button
            android:id="@+id/ping_button"
            android:text="@string/ping_button_text"
            android:layout_width="200dp"
            android:layout_height="64dp" />
        <Button
            android:id="@+id/create_point_button"
            android:text="@string/create_point_debug_text"
            android:layout_width="200dp"
            android:layout_height="64dp" />
        <Button
            android:id="@+id/get_points_button"
            android:text="@string/get_points_debug_text"
            android:layout_width="200dp"
            android:layout_height="64dp" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
